--- a/.github/workflows/wf1-figma-tokens-push.yaml
+++ b/.github/workflows/wf1-figma-tokens-push.yaml
@@ -19,4 +19,4 @@ jobs:
           pr_title: 'Update tokens'
           pr_body: 'This is an automated pull request to update from branch figma-tokens'
           pr_label: 'automerge'
-          github_token: ${{ secrets.CABRA_P_PAT }}
+          github_token: ${{ secrets.FIGMA_PAT }}
