--- a/.github/workflows/wf1-figma-tokens-push.yaml
+++ b/.github/workflows/wf1-figma-tokens-push.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: create pull request
         uses: repo-sync/pull-request@v2
         with:
-          destination_branch: 'main'
+          destination_branch: 'master'
           pr_title: 'Update tokens'
           pr_body: 'This is an automated pull request to update from branch figma-tokens'
           pr_label: 'automerge'
