--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "CabraComponents/TagPill.js"  ],
+, "components/TagPill.js"  ],
   "exclude": [
     "node_modules"
   ]
