--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nextra",
+  "name": "cabra",
   "version": "1.0.0",
-  "description": "",
+  "description": "_Warning: this project is not production ready, API might change without notice._",
   "main": "index.js",
   "scripts": {
     "dev": "next",
@@ -27,5 +27,13 @@
   "prettier": {
     "semi": false,
     "singleQuote": true
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ibex-CRM/Cabra.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Ibex-CRM/Cabra/issues"
+  },
+  "homepage": "https://github.com/Ibex-CRM/Cabra#readme"
 }
