--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "components/TagPill.js"  ],
+, "npm/TagPill.js
   "exclude": [
     "node_modules"
   ]
