--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-dom": "^17.0.1",
     "style-dictionary": "^3.7.1",
     "styled-components": "^5.3.6",
-    "token-transformer": "^0.0.27",
-    "typescript": "^4.8.4"
+    "token-transformer": "^0.0.27"
   },
   "devDependencies": {
     "prettier": "^2.0.5"
