mdx loader added

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Shu Ding",
   "license": "MIT",
   "dependencies": {
+    "@mdx-js/loader": "^2.1.5",
     "next": "^12.1.0",
     "next-optimized-images": "^1.4.2",
     "nextra": "^0.4.1",
