--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "nextra": "^0.4.1",
     "nextra-theme-docs": "^1.2.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "style-dictionary": "^3.7.1",
+    "token-transformer": "^0.0.27"
   },
   "devDependencies": {
     "prettier": "^2.0.5"
