--- a/.github/workflows/wf4-deploy-docs.yaml
+++ b/.github/workflows/wf4-deploy-docs.yaml
@@ -1,34 +1,37 @@
 name: Deploy to GitHub Pages
 
 on:
-  push:
-    branches: [master]
+  pull_request_target:
+    types:
+      - closed
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  if_merged:
+    if: github.event.pull_request.merged == true
+    build:
+      runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [14.x]
+      strategy:
+        matrix:
+          node-version: [14.x]
 
-    steps:
-      - name: Get files
-        uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Install packages
-        run: npm ci
-      - name: Build project
-        run: npm run build
-      - name: Export static files
-        run: npm run export
-      - name: Add .nojekyll file
-        run: touch ./out/.nojekyll
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4.1.1
-        with:
-          branch: gh-pages
-          folder: out
+      steps:
+        - name: Get files
+          uses: actions/checkout@v2
+        - name: Use Node.js ${{ matrix.node-version }}
+          uses: actions/setup-node@v2
+          with:
+            node-version: ${{ matrix.node-version }}
+        - name: Install packages
+          run: npm ci
+        - name: Build project
+          run: npm run build
+        - name: Export static files
+          run: npm run export
+        - name: Add .nojekyll file
+          run: touch ./out/.nojekyll
+        - name: Deploy
+          uses: JamesIves/github-pages-deploy-action@4.1.1
+          with:
+            branch: gh-pages
+            folder: out
