wf4 runs after automerge completed now

--- a/.github/workflows/wf4-deploy-docs.yaml
+++ b/.github/workflows/wf4-deploy-docs.yaml
@@ -1,13 +1,13 @@
 name: Deploy to GitHub Pages
 
 on:
-  pull_request_target:
+  workflow_run:
+    workflows: ['automerge']
     types:
-      - closed
+      - completed
 
 jobs:
-  if_merged:
-    if: github.event.pull_request.merged == true
+  build:
     runs-on: ubuntu-latest
 
     strategy:
