--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "style-dictionary": "^3.7.1",
+    "styled-components": "^5.3.6",
     "token-transformer": "^0.0.27"
   },
   "devDependencies": {
