--- a/.github/workflows/wf4-deploy-docs.yaml
+++ b/.github/workflows/wf4-deploy-docs.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Install packages
         run: npm ci
       - name: Build project
-        run: npm run build
+        run: next build
       - name: Export static files
         run: npm run export
       - name: Add .nojekyll file
