--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nextra-theme-docs": "^1.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-is": "^18.2.0",
     "style-dictionary": "^3.7.1",
     "styled-components": "^5.3.6",
     "token-transformer": "^0.0.27"
